--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Octagon Menu</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <ul class="menu">
@@ -19,10 +19,10 @@
         <a href="#"><ion-icon name="mail-outline"></ion-icon></a>
       </li>
       <li style="--i: 3; --clr: #fe00f1">
-        <a href="#"><ion-icon name="key-outline"></ion-icon></a>
+        <a href="html/PruebaMenuFotos.html"><ion-icon name="key-outline"></ion-icon></a>
       </li>
       <li style="--i: 4; --clr: #00b0fe">
-        <a href="IndexFoto.html"><ion-icon name="camera-outline"></ion-icon></a>
+        <a href="html/IndexFoto.html"><ion-icon name="camera-outline"></ion-icon></a>
       </li>
       <li style="--i: 5; --clr: #fea600">
         <a href="#"><ion-icon name="game-controller-outline"></ion-icon></a>
